--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,8 @@ body {font: 13px Helmet, Freesans, sans-serif; background-color:#000;}
 /* We like off-black for text. */
 body, select, input, textarea {color: #555;}
 
-a {color: #888;}
-a:hover {color: #69f;}
+a {color: #888;border-bottom:1px solid red;box-shadow: inset 0 -3px 0 red;text-decoration:none;}
+a:hover {color: #fff;background-color:red;padding-top:3px;}
 
 /* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
 ::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
@@ -66,23 +66,33 @@ header {
 	max-width:600px;
 	flex-grow:1;
 	align-self:flex-end;
-	height:110px;
+	/*height:110px;*/
 }
 header img {
-	width:150px;
-	float:left;
-	margin:10px 20px 0 0;
+	width:70%;
+	/*float:left;*/
+	margin:10px auto;
+	border:none;
+}
+header a {
+	border:none;
+	box-shadow:none;
 }
 header h1 {
-	float:left;
+	/*float:left;*/
 }
 header h1 a {
 	color:#ddd;
 	text-decoration:none;
+	border-bottom:3px solid red;
+	box-shadow: inset 0 -10px 0 red;
 }
 header h1 a:hover {
 	color:#fff;
 	text-decoration:none;
+	background-color:red;
+	box-shadow: inset 0 10px 0 red;
+	padding-top:10px;
 }
 header nav {
 	float:none;
@@ -124,13 +134,13 @@ header nav {
 	text-align:center;
 }
 #countdownClock .clockNumber {
-	font-size:8em;
-	margin:0 20px;
+	font-size:2em;
+	margin:15px 10px 0;
 	padding:0;
 }
 #countdownClock .clockType {
-	font-size:4em;
-	margin:0 10px;
+	font-size:1.5em;
+	margin:0 5px;
 }
 
 .clock span, .clockType, .clockNumber {
@@ -151,6 +161,16 @@ header nav {
 .shareItem {
 	margin:5px 0;
 }
+.shareItem a {
+	border:none;
+	box-shadow:none;
+}
+.shareItem a:hover {
+	border:none;
+	box-shadow:none;
+	background-color:transparent;
+}
+
 
 #shareBlock {
 	max-width:800px;
@@ -170,7 +190,7 @@ header nav {
 	max-width: 750px;
 	text-align: center;
 	margin:5px auto;
-	line-height: 1.25;
+	line-height: 1.05;
 }
 .narrative h4 {
 	line-height: 1.05;
@@ -183,8 +203,47 @@ footer {
 	align-self:flex-end;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 800px) {
+	h1 {font-size:5em;}
+	h2 {font-size:4em;}
+	h3 {font-size:2.5em;}
+	h4 {font-size:2em;}
+	h5 {font-size:1.75em;}
+	h6 {font-size:1.5em;}
 
+	header {
+		margin:auto;
+		max-width:600px;
+		flex-grow:1;
+		align-self:flex-end;
+		height:110px;
+	}
+	header img {
+		width:170px;
+		float:left;
+		margin:10px 20px 0 0;
+	}
+	header h1 {
+		float:left;
+	}
+
+	.narrative {
+		line-height: 1.25;
+	}
+	.narrative h4 {
+		line-height: 1.05;
+	}
+
+
+	#countdownClock .clockNumber {
+		font-size:8em;
+		margin:0 20px;
+		padding:0;
+	}
+	#countdownClock .clockType {
+		font-size:4em;
+		margin:0 10px;
+	}
 
 }
 
