--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* A Linux- and Windows-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
-body {font: 13px Helmet, Freesans, sans-serif; background-color:#000;}
+body {font: 13px Helmet, Freesans, sans-serif; background-color:#fff;}
 
 .DigitalICG { 
 	font-family: DigitalICG;
@@ -10,10 +10,10 @@ body {font: 13px Helmet, Freesans, sans-serif; background-color:#000;}
 /* Using local fonts? Check out Font Squirrel's webfont generator: http://www.fontsquirrel.com/tools/webfont-generator */
 
 /* We like off-black for text. */
-body, select, input, textarea {color: #555;}
+body, select, input, textarea {color: #333;}
 
-a {color: #888;border-bottom:1px solid red;box-shadow: inset 0 -3px 0 red;text-decoration:none;}
-a:hover {color: #fff;background-color:red;padding-top:3px;}
+a {color: #666;border-bottom:1px solid lightblue;box-shadow: inset 0 -3px 0 lightblue;text-decoration:none;}
+a:hover {color: #fff;background-color:lightblue;padding-top:3px;}
 
 /* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
 ::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
@@ -85,16 +85,16 @@ header h1 {
 	/*float:left;*/
 }
 header h1 a {
-	color:#ddd;
+	color:#888;
 	text-decoration:none;
-	border-bottom:3px solid red;
-	box-shadow: inset 0 -10px 0 red;
+	border-bottom:3px solid lightblue;
+	box-shadow: inset 0 -10px 0 lightblue;
 }
 header h1 a:hover {
 	color:#fff;
 	text-decoration:none;
-	background-color:red;
-	box-shadow: inset 0 10px 0 red;
+	background-color:lightblue;
+	box-shadow: inset 0 10px 0 lightblue;
 	padding-top:10px;
 }
 header nav {
@@ -147,11 +147,11 @@ header nav {
 }
 
 .clock span, .clockType, .clockNumber {
-	color:red;
+	color: lightblue;
 }
 .clockDays, .clockHours, .clockMinutes, .clockSeconds, .clockShares {
 	text-align:center;
-	background-color:#111;
+	background-color:#888;
 	margin:0 5px;
 	padding:5px;
 }
@@ -163,10 +163,12 @@ header nav {
 }
 .shareItem {
 	margin:5px 0;
+	color:lightblue;
 }
 .shareItem a {
 	border:none;
 	box-shadow:none;
+	color:lightblue;
 }
 .shareItem a:hover {
 	border:none;
