--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,10 +180,11 @@ header nav {
 }
 .clockShares {
 	margin-top:10px;
+	background-color: #000;
 }
 .shareItem {
 	margin:5px 0;
-	color:lightblue;
+	color:#fff;
 }
 .socialLink {
 	display: inline;
@@ -192,12 +193,13 @@ header nav {
 .shareItem a {
 	border:none;
 	box-shadow:none;
-	color:lightblue;
+	color:#fff;
 }
 .shareItem a:hover {
 	border:none;
 	box-shadow:none;
 	background-color:transparent;
+	color:lightblue;
 }
 
 
@@ -267,11 +269,12 @@ footer {
 		flex-direction:column;
 		justify-content:center;
 		align-items:center;
+		background-color: #000;
 	}
 	.shareItem {
 		max-width: 100px;
 		margin:5px 0;
-		color:lightblue;
+		color:#fff;
 	}
 	.socialLink {
 		display: block;
@@ -335,11 +338,12 @@ footer {
 		flex-direction:column;
 		justify-content:center;
 		align-items:center;
+		background-color: #000;
 	}
 	.shareItem {
 		max-width: 150px;
 		margin:10px 0;
-		color:lightblue;
+		color:#fff;
 	}
 	.socialLink {
 		display: block;
